added code to estimate the number of violations of Fréchet bounds by the kernel estimator

--- a/mv_kecdf_frechet.ipynb
+++ b/mv_kecdf_frechet.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How does bandwidth selection look like?\n",
+    "Code for bandwith selection methods in StatsModels can be found [here](https://www.statsmodels.org/dev/_modules/statsmodels/nonparametric/_kernel_base.html). \n",
+    "\n",
+    "As the library is today (march 2019), there is no obviously direct way to feed ranges of hyperparameters in order to speed-up the bandwidth selection process. So, I made some simple modifications to be able to affect how the base methods to calculate a bandwidth are used. Those modifications are below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -128,25 +138,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_frechets(dvars):\n",
-    "    d=len(dvars)\n",
-    "    n=len(dvars[0])\n",
-    "    dimx=np.array(range(d))\n",
-    "    un=np.ones(d,dtype=int)\n",
-    "    bottom_frechet = np.array([max( np.sum( dvars[dimx,un*i] ) +1-d, 0 ) \n",
-    "                               for i in range(n) ])\n",
-    "    top_frechet = np.array([min([y[i] for y in dvars]) for i in range(n)])\n",
-    "    return {'top': top_frechet, 'bottom': bottom_frechet}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 24.8 s per loop\n"
+      "1 loop, best of 3: 24.8 s per loop\n",
+      "bw with maximum likelihood [0.05736242 0.04029152 0.11121857 0.10762569]\n"
      ]
     }
    ],
@@ -277,243 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 loops, best of 3: 8.65 ms per loop\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit -n10 get_frechets(rd)\n",
-    "frechet=get_frechets(rd)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### How does bandwidth selection look like?\n",
-    "Code for bandwith selection methods in in this package can be found [here](https://www.statsmodels.org/dev/_modules/statsmodels/nonparametric/_kernel_base.html). \n",
-    "\n",
-    "As the library is today (march 2019), there is no obviously direct way to feed ranges of hyperparameters in order to speed-up the bandwidth selection process. So, I made some simple modifications to be able to affect how the base methods to calculate a bandwidth are used."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.175 0.173 0.076 0.073]\n",
-      "[0.18375 0.173   0.076   0.073  ]\n",
-      "[0.175   0.18165 0.076   0.073  ]\n",
-      "[0.175  0.173  0.0798 0.073 ]\n",
-      "[0.175   0.173   0.076   0.07665]\n",
-      "[0.179375 0.16435  0.0779   0.074825]\n",
-      "[0.1815625 0.1557    0.07885   0.0757375]\n",
-      "[0.16953125 0.16435    0.079325   0.07619375]\n",
-      "[0.16242187 0.160025   0.0809875  0.07779062]\n",
-      "[0.17199219 0.1578625  0.08181875 0.07311406]\n",
-      "[0.17048828 0.15029375 0.07902812 0.07682109]\n",
-      "[0.16823242 0.13894062 0.07864219 0.07873164]\n",
-      "[0.16710449 0.13326406 0.08414922 0.07968691]\n",
-      "[0.16315674 0.11339609 0.08822383 0.08303037]\n",
-      "[0.15133911 0.12941211 0.08598613 0.08059585]\n",
-      "[0.15058289 0.11302441 0.08510107 0.08696018]\n",
-      "[0.13987823 0.09060537 0.08674224 0.09388324]\n",
-      "[0.14888138 0.0761521  0.08880969 0.09032993]\n",
-      "[0.14211113 0.03421565 0.09272079 0.09659958]\n",
-      "[0.13001019 0.04487399 0.09819431 0.09832288]\n",
-      "[ 0.11089907 -0.00215933  0.10797036  0.1081185 ]\n",
-      "[0.13623903 0.01213344 0.09695445 0.10532218]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/lia/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:65: RuntimeWarning: invalid value encountered in log\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.11096255 -0.02248187  0.09908206  0.11403357]\n",
-      "[0.15010819 0.0794266  0.09093839 0.09078117]\n",
-      "[ 0.13935603 -0.00528053  0.10266173  0.10162966]\n",
-      "[0.13974768 0.0666339  0.09072211 0.09581985]\n",
-      "[ 0.12394582 -0.00049812  0.09835744  0.10725107]\n",
-      "[0.1435676  0.05944542 0.09279315 0.09489865]\n",
-      "[0.14147927 0.09045104 0.09026073 0.08749829]\n",
-      "[0.13754909 0.03171284 0.09528102 0.10086621]\n",
-      "[0.13687132 0.01849005 0.09877252 0.09952381]\n",
-      "[0.12970326 0.00520084 0.09969117 0.10275759]\n",
-      "[0.14010152 0.04588428 0.09451765 0.09686338]\n",
-      "[0.13316935 0.01876199 0.09796666 0.10079285]\n",
-      "[0.13454856 0.04629218 0.09330887 0.09876695]\n",
-      "[0.13894014 0.05978534 0.09178583 0.09648495]\n",
-      "[0.13461204 0.02901783 0.09642145 0.09971588]\n",
-      "[0.13759267 0.02361797 0.09799992 0.09898532]\n",
-      "[0.12777086 0.03039566 0.10122756 0.10234557]\n",
-      "[0.12060073 0.02848567 0.10548094 0.10521856]\n",
-      "[0.13516708 0.01154317 0.09939736 0.10407011]\n",
-      "[0.13129941 0.03654128 0.09849507 0.09975969]\n",
-      "[0.12443797 0.03926084 0.09983932 0.10379485]\n",
-      "[0.11792599 0.03493997 0.10483738 0.10337828]\n",
-      "[0.10811443 0.03655353 0.10961556 0.10463431]\n",
-      "[0.11258318 0.03011765 0.10718357 0.10692212]\n",
-      "[0.09825611 0.03819102 0.11463824 0.11056904]\n",
-      "[0.08007815 0.04277761 0.12374664 0.11599562]\n",
-      "[0.08625028 0.02970639 0.12317403 0.11259046]\n",
-      "[0.06715643 0.02492917 0.13484138 0.11698826]\n",
-      "[0.06336537 0.03870331 0.13221263 0.11705159]\n",
-      "[0.03474768 0.04381213 0.14557848 0.12296811]\n",
-      "[0.04677401 0.04136417 0.14302454 0.12041278]\n",
-      "[0.02057254 0.0373336  0.15729704 0.13058982]\n",
-      "[0.08622896 0.03674855 0.12153593 0.11112319]\n",
-      "[0.05168423 0.02809499 0.1420606  0.11679229]\n",
-      "[0.02826106 0.02979727 0.15453365 0.12449927]\n",
-      "[0.07173698 0.03501073 0.12978536 0.11446721]\n",
-      "[0.0801975  0.02200494 0.12642545 0.1122369 ]\n",
-      "[0.05512988 0.03652436 0.13887476 0.11836881]\n",
-      "[0.0538018  0.04423752 0.13662529 0.11635169]\n",
-      "[0.04025366 0.03876936 0.14510129 0.11981498]\n",
-      "[0.06386615 0.03595039 0.13361434 0.11580415]\n",
-      "[0.06639737 0.0496128  0.12860291 0.11699583]\n",
-      "[0.05536252 0.03347444 0.13869618 0.11684318]\n",
-      "[0.06506015 0.02808873 0.13507366 0.11768218]\n",
-      "[0.05634399 0.02831565 0.14091684 0.11729756]\n",
-      "[0.05029111 0.03904369 0.1409774  0.11647467]\n",
-      "[0.05598084 0.04418079 0.1351645  0.11644784]\n",
-      "[0.0562532  0.03228193 0.13947876 0.11708513]\n",
-      "[0.0446522  0.03471182 0.14539921 0.11858174]\n",
-      "[0.05906267 0.03564075 0.13656056 0.11649855]\n",
-      "[0.06261302 0.02991705 0.13582773 0.11792316]\n",
-      "[0.06151582 0.02913273 0.13640685 0.1158062 ]\n",
-      "[0.05348408 0.03534787 0.13974344 0.11519337]\n",
-      "[0.05056541 0.03923977 0.14083262 0.11700391]\n",
-      "[0.05877822 0.03165949 0.13751329 0.11610563]\n",
-      "[0.05287634 0.03074112 0.14115527 0.1161151 ]\n",
-      "[0.05751608 0.03441584 0.13770924 0.11640269]\n",
-      "[0.05631725 0.03516689 0.13735232 0.1151873 ]\n",
-      "[0.05634927 0.03660936 0.1362891  0.11423838]\n",
-      "[0.05447096 0.03412974 0.13841177 0.11478759]\n",
-      "[0.0510552  0.03812122 0.13905695 0.11442563]\n",
-      "[0.05513489 0.03581952 0.13648356 0.11495402]\n",
-      "[0.0559603  0.03605534 0.13485361 0.11483434]\n",
-      "[0.05355535 0.03898339 0.13560954 0.11229979]\n",
-      "[0.05265177 0.04173787 0.13406621 0.1100281 ]\n",
-      "[0.05866095 0.03614493 0.13275339 0.11251858]\n",
-      "[0.06246383 0.03515679 0.12960162 0.11156505]\n",
-      "[0.05924162 0.04064994 0.1289935  0.11054535]\n",
-      "[0.06162695 0.04391003 0.12428437 0.10842423]\n",
-      "[0.05880948 0.0401906  0.12746838 0.10924804]\n",
-      "[0.06003958 0.04198122 0.12305802 0.10675287]\n",
-      "[0.0612381  0.04370757 0.12300606 0.10461134]\n",
-      "[0.0688398  0.03900989 0.11826339 0.10670921]\n",
-      "[0.06221573 0.04751752 0.11705887 0.10274433]\n",
-      "[0.06692498 0.04545816 0.11169966 0.09986353]\n",
-      "[0.0563694  0.05032234 0.11914792 0.10027683]\n",
-      "[0.06153674 0.04893205 0.11247617 0.10020744]\n",
-      "[0.06168607 0.05154429 0.10721123 0.09800548]\n",
-      "[0.06021963 0.04582937 0.11613202 0.100806  ]\n",
-      "[0.05922158 0.0449853  0.11566859 0.09983684]\n",
-      "[0.05165867 0.04765229 0.12347569 0.10367346]\n",
-      "[0.05985889 0.04145309 0.11819132 0.10495847]\n",
-      "[0.06160364 0.03701846 0.11771302 0.10729929]\n",
-      "[0.05697073 0.04731283 0.11160872 0.09875564]\n",
-      "[0.06800768 0.04147202 0.10525756 0.09937614]\n",
-      "[0.05574592 0.04610723 0.11892116 0.10259913]\n",
-      "[0.05523419 0.03877985 0.11947957 0.10403801]\n",
-      "[0.05208291 0.03370375 0.12298126 0.10595329]\n",
-      "[0.06076915 0.03794099 0.11331379 0.10236576]\n",
-      "[0.06328076 0.03385787 0.11051011 0.10224907]\n",
-      "[0.05806728 0.03554077 0.11538895 0.10639251]\n",
-      "[0.06086639 0.02732721 0.12133894 0.11129214]\n",
-      "[0.05794465 0.04231642 0.11404127 0.10188976]\n",
-      "[0.05440399 0.04027056 0.11339878 0.10004373]\n",
-      "[0.05980373 0.03783148 0.11663446 0.1054854 ]\n",
-      "[0.06305821 0.03803498 0.11020967 0.1040287 ]\n",
-      "[0.0611022  0.0382212  0.11252714 0.10403103]\n",
-      "[0.06174259 0.04261428 0.11286938 0.10049347]\n",
-      "[0.0589861  0.03730915 0.11475906 0.10491775]\n",
-      "[0.05814919 0.03989814 0.11566718 0.10579621]\n",
-      "[0.05683921 0.04087671 0.11684387 0.10751144]\n",
-      "[0.05828735 0.04104097 0.11186287 0.10283198]\n",
-      "[0.05752916 0.04264571 0.10947708 0.10150527]\n",
-      "[0.05558144 0.04206114 0.11563805 0.10368682]\n",
-      "[0.05599521 0.04534919 0.11384563 0.10218464]\n",
-      "[0.05823838 0.03931916 0.1145307  0.10423447]\n",
-      "[0.05718353 0.03884328 0.11480812 0.10638498]\n",
-      "[0.05680297 0.0371067  0.11519155 0.10863259]\n",
-      "[0.06034778 0.03748963 0.11279639 0.105937  ]\n",
-      "[0.0591562  0.03863251 0.1135068  0.10537446]\n",
-      "[0.05828354 0.03901982 0.11168707 0.10361673]\n",
-      "[0.05818278 0.03967856 0.11467215 0.10525134]\n",
-      "[0.05816655 0.0397785  0.11289427 0.10568691]\n",
-      "[0.05813063 0.04000817 0.11207606 0.10641313]\n",
-      "[0.05803922 0.03754028 0.1156687  0.10887997]\n",
-      "[0.05822532 0.0401658  0.11281433 0.10434398]\n",
-      "[0.05670493 0.04071539 0.11367853 0.10582226]\n",
-      "[0.05693943 0.04018776 0.11201637 0.10623083]\n",
-      "[0.05781662 0.04169528 0.11048452 0.10502012]\n",
-      "[0.05657049 0.0411375  0.11131341 0.10739919]\n",
-      "[0.05574307 0.04162336 0.11056295 0.10892679]\n",
-      "[0.05802365 0.04079897 0.10926665 0.10670937]\n",
-      "[0.05701548 0.03937092 0.11185173 0.10835614]\n",
-      "[0.05630436 0.03955321 0.11436213 0.10749027]\n",
-      "[0.05759383 0.04048753 0.11054052 0.1069046 ]\n",
-      "[0.05771579 0.0403143  0.11087449 0.1083057 ]\n",
-      "[0.05631716 0.04064695 0.11021401 0.10906968]\n",
-      "[0.05767726 0.04016787 0.11161055 0.10707727]\n",
-      "[0.05776321 0.04168268 0.11031776 0.10648723]\n",
-      "[0.05720241 0.03994886 0.11146823 0.10788891]\n",
-      "[0.05852416 0.03932177 0.11093349 0.10768905]\n",
-      "[0.05705891 0.04068357 0.11121843 0.10747165]\n",
-      "[0.05705042 0.04032961 0.11154438 0.10636552]\n",
-      "[0.05754945 0.04031813 0.11104196 0.10782065]\n",
-      "[0.05715018 0.04007168 0.11212907 0.10822465]\n",
-      "[0.05748292 0.04038357 0.11093766 0.10723461]\n",
-      "[0.05696958 0.0404992  0.11072259 0.10813065]\n",
-      "[0.05750034 0.0402507  0.11138856 0.10734061]\n",
-      "[0.05759339 0.04086912 0.11082507 0.10704485]\n",
-      "[0.05730016 0.04017892 0.11130744 0.1076779 ]\n",
-      "[0.05785753 0.03988209 0.11111938 0.10756523]\n",
-      "[0.05725856 0.0404832  0.11119367 0.10749505]\n",
-      "[0.05722154 0.04033007 0.1113717  0.10705343]\n",
-      "[0.05746747 0.04032111 0.1111244  0.10762885]\n",
-      "[0.05728035 0.0402334  0.11156938 0.10783659]\n",
-      "[0.05743228 0.04034602 0.11109559 0.10738511]\n",
-      "[0.05722889 0.04041393 0.11097199 0.10775284]\n",
-      "[0.05729675 0.04037312 0.11107613 0.10764978]\n",
-      "[0.05748977 0.04012639 0.11110811 0.10767577]\n",
-      "[0.05731636 0.040394   0.11117228 0.10754023]\n",
-      "[0.05745627 0.0405382  0.11092675 0.10742408]\n",
-      "[0.05733919 0.04026874 0.11121227 0.10761444]\n",
-      "[0.05727761 0.04033246 0.11119695 0.10783155]\n",
-      "[0.05739361 0.04034263 0.11112093 0.10749672]\n",
-      "[0.05720549 0.04036814 0.11116641 0.10752174]\n",
-      "[0.05740197 0.04033287 0.1111349  0.10760207]\n",
-      "[0.05742881 0.040296   0.11124406 0.10747695]\n",
-      "[0.05732977 0.04035384 0.11111811 0.10760657]\n"
      ]
     }
    ],
@@ -542,6 +305,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now let's check how the KP estimations fit on Fréchet's bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_frechets(dvars):\n",
+    "    d=len(dvars)\n",
+    "    n=len(dvars[0])\n",
+    "    dimx=np.array(range(d))\n",
+    "    un=np.ones(d,dtype=int)\n",
+    "    bottom_frechet = np.array([max( np.sum( dvars[dimx,un*i] ) +1-d, 0 ) \n",
+    "                               for i in range(n) ])\n",
+    "    top_frechet = np.array([min([y[i] for y in dvars]) for i in range(n)])\n",
+    "    return {'top': top_frechet, 'bottom': bottom_frechet}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_frechet_fails(guinea_cdf,frechets):\n",
+    "    fails={'top':[], 'bottom':[]}\n",
+    "    for n in range(len(rd[0])):\n",
+    "        #n_hyper_point=np.array([x[n] for x in rd])\n",
+    "        if guinea_cdf[n]>frechets['top'][n]:\n",
+    "            fails['top'].append(True)\n",
+    "        else:\n",
+    "            fails['top'].append(False)\n",
+    "\n",
+    "        if guinea_cdf[n]<frechets['bottom'][n]:\n",
+    "            fails['bottom'].append(True)\n",
+    "        else:\n",
+    "            fails['bottom'].append(False)\n",
+    "    return {'top':np.array(fails['top']),\n",
+    "            'bottom':np.array(fails['bottom'])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 8.91 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit -n10 get_frechets(rd)\n",
+    "frechets=get_frechets(rd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fréchet Bound Violations by all estimators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guinea_pig=sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw=tst)\n",
+    "guinea_cdf=guinea_pig.cdf()\n",
+    "print(guinea_cdf.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frechet Violations: top: 81  bottom: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "guinea_fails=check_frechet_fails(guinea_cdf,frechets)\n",
+    "print('Frechet Violations:','top:', np.sum(guinea_fails['top']), ' bottom:',np.sum(guinea_fails['bottom']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vanilla_pig=sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw=dens_u_rot.bw)\n",
+    "vanilla_cdf=vanilla_pig.cdf()\n",
+    "print(vanilla_cdf.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frechet Violations: top: 83  bottom: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "vanilla_fails=check_frechet_fails(vanilla_cdf,frechets)\n",
+    "print('Frechet Violations:','top:', np.sum(vanilla_fails['top']), ' bottom:',np.sum(vanilla_fails['bottom']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Misc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing LeaveOneOut class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -552,15 +469,6 @@
     "for x in loo:\n",
     "    print ('hihi',x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
