debuggable pre-notebook work to prepare data and compare methods

--- a/mv_kecdf_frechet.ipynb
+++ b/mv_kecdf_frechet.ipynb
@@ -7,12 +7,12 @@
     "### How does bandwidth selection look like?\n",
     "Code for bandwith selection methods in StatsModels can be found [here](https://www.statsmodels.org/dev/_modules/statsmodels/nonparametric/_kernel_base.html). \n",
     "\n",
-    "As the library is today (march 2019), there is no obviously direct way to feed ranges of hyperparameters in order to speed-up the bandwidth selection process. So, I made some simple modifications to be able to affect how the base methods to calculate a bandwidth are used. Those modifications are below."
+    "As the library is today (march 2019), there is no obviously direct way to feed ranges of hyperparameters in order to constrain the bandwidth selection process. So, I made some simple modifications to be able to affect how the base methods to calculate a bandwidth are used. Those modifications are below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,8 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -194,8 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rd=np.array(list(mvdata.values()))"
@@ -210,15 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 loops, best of 3: 96.9 µs per loop\n",
-      "bw with reference [0.17522469 0.17319641 0.07593955 0.07331553] (only available for gaussian kernels)\n"
+      "2 loops, best of 3: 106 µs per loop\n",
+      "bw with reference [0.17402781 0.16777569 0.07661515 0.07925317] (only available for gaussian kernels)\n"
      ]
     }
    ],
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +248,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 24.8 s per loop\n",
-      "bw with maximum likelihood [0.05736242 0.04029152 0.11121857 0.10762569]\n"
+      "1 loop, best of 3: 24.7 s per loop\n",
+      "bw with maximum likelihood [0.03361851 0.07064256 0.10817853 0.11647636]\n"
      ]
     }
    ],
@@ -259,17 +262,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "%timeit -n2 sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw='cv_ls')\n",
-    "dens_u_ls = sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw='cv_ls')\n",
-    "print('bw with least squares',dens_u_ls.bw)"
+    "# BW with least squares takes >8x more than with ml\n",
+    "#%timeit -n2 sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw='cv_ls')\n",
+    "#dens_u_ls = sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw='cv_ls')\n",
+    "#print('bw with least squares',dens_u_ls.bw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting BW from statsmodels puppet\n",
+    "We build a puppet out of statsmodels code. First we verify that we can get reasonable estimates of bandwidth. \n",
+    "\n",
+    "Then we add an option to allow Fréchet bounds to prune hyperparameter search."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.05732977 0.04035384 0.11111811 0.10760657] \n",
-      " [0.17522469 0.17319641 0.07593955 0.07331553]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('our estimate:',tst,'\\nrule-of-thumb estimate:',dens_u_rot.bw,'\\n ml estimate:',dens_u_ml.bw)"
    ]
@@ -313,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -332,13 +339,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def check_frechet_fails(guinea_cdf,frechets):\n",
     "    fails={'top':[], 'bottom':[]}\n",
-    "    for n in range(len(rd[0])):\n",
+    "    for n in range(len(guinea_cdf)):\n",
     "        #n_hyper_point=np.array([x[n] for x in rd])\n",
     "        if guinea_cdf[n]>frechets['top'][n]:\n",
     "            fails['top'].append(True)\n",
@@ -355,17 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 loops, best of 3: 8.91 ms per loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit -n10 get_frechets(rd)\n",
     "frechets=get_frechets(rd)"
@@ -380,8 +381,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "guinea_pig=sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw=tst)\n",
@@ -391,17 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frechet Violations: top: 81  bottom: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "guinea_fails=check_frechet_fails(guinea_cdf,frechets)\n",
     "print('Frechet Violations:','top:', np.sum(guinea_fails['top']), ' bottom:',np.sum(guinea_fails['bottom']))"
@@ -409,17 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vanilla_pig=sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw=dens_u_rot.bw)\n",
     "vanilla_cdf=vanilla_pig.cdf()\n",
@@ -428,17 +415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frechet Violations: top: 83  bottom: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vanilla_fails=check_frechet_fails(vanilla_cdf,frechets)\n",
     "print('Frechet Violations:','top:', np.sum(vanilla_fails['top']), ' bottom:',np.sum(vanilla_fails['bottom']))"
@@ -461,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = np.random.normal(0, 1, [10,2])\n",
