slides, test code

--- a/mv_kecdf_frechet.ipynb
+++ b/mv_kecdf_frechet.ipynb
@@ -2,12 +2,164 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Data science friday tales\n",
+    "\n",
+    "### Lia Silva-Lopez\n",
+    "\n",
+    "---\n",
+    "\n",
+    "*Tuesday, 19/03/2019*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## This story starts with a reading accident\n",
+    "\n",
+    "#### One moment you are reading a book...\n",
+    "\n",
+    "<img src=\"img/reading_accident.png\">\n",
+    "\n",
+    "#### ...And then Fréchet hits you."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Bounds for distributions* in terms of its marginals?\n",
+    "\n",
+    "* That makes perfect sense!\n",
+    "\n",
+    "* Why aren't Fréchet bounds for distributions more mainstream? \n",
+    "\n",
+    "* Is it because it's hard to pronounce?\n",
+    "\n",
+    "*_with distributions we mean CDFs, not densities_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Allright, let's point the fingers at ourselves:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## What would _I_ do with Fréchet bounds?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"https://media.giphy.com/media/4uraUi810KSMo/giphy.gif\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Idea 1: Use them to estimate Kernel Bandwidths\n",
+    "\n",
+    "The *whole point* of bounds is to try not to break them.\n",
+    "\n",
+    "##### Are we breaking Fréchet bounds when CDF estimations with Kernels?\n",
+    "###### And if we break them, how *badly* are we breaking those bounds? \n",
+    "###### And what is the consequence of building estimates that break Fréchet bounds?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Fréchet bounds + BW estimation in KDEs?\n",
+    "\n",
+    "* The bounds can help prune the search space:\n",
+    "    * Removing parameters that build estimates outside the bounds.\n",
+    "    * Or (if the above was too violent), prune using thresholds. \n",
+    "\n",
+    "### Even bolder:\n",
+    "* Use the bounds stand-alone to construct likelihood functions and use them directly to fit the bandwidths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### How does bandwidth selection look like?\n",
     "Code for bandwith selection methods in StatsModels can be found [here](https://www.statsmodels.org/dev/_modules/statsmodels/nonparametric/_kernel_base.html). \n",
     "\n",
     "As the library is today (march 2019), there is no obviously direct way to feed ranges of hyperparameters in order to constrain the bandwidth selection process. So, I made some simple modifications to be able to affect how the base methods to calculate a bandwidth are used. Those modifications are below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://data.whicdn.com/images/40743151/original.gif\">"
    ]
   },
   {
@@ -305,7 +457,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('our estimate:',tst,'\\nrule-of-thumb estimate:',dens_u_rot.bw,'\\n ml estimate:',dens_u_ml.bw)"
@@ -365,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%timeit -n10 get_frechets(rd)\n",
@@ -395,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "guinea_fails=check_frechet_fails(guinea_cdf,frechets)\n",
@@ -405,7 +563,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vanilla_pig=sm.nonparametric.KDEMultivariate(data=rd,var_type=v_type, bw=dens_u_rot.bw)\n",
@@ -416,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vanilla_fails=check_frechet_fails(vanilla_cdf,frechets)\n",
@@ -453,6 +615,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
