better description of things

--- a/mv_kecdf_frechet.ipynb
+++ b/mv_kecdf_frechet.ipynb
@@ -8,9 +8,10 @@
     }
    },
    "source": [
-    "# Data science friday tales\n",
+    "# Data science friday tales:\n",
+    "### Using Fréchet Bounds for Bandwidth selection in MV Kernel Methods.\n",
     "\n",
-    "### Lia Silva-Lopez\n",
+    "#### Lia Silva-Lopez\n",
     "\n",
     "---\n",
     "\n",
@@ -26,12 +27,13 @@
    },
    "source": [
     "## This story starts with a reading accident\n",
+    "---\n",
     "\n",
     "#### One moment you are reading a book...\n",
     "\n",
     "<img src=\"img/reading_accident.png\">\n",
     "\n",
-    "#### ...And then Fréchet hits you."
+    "#### ...And the next there are bounds for everything."
    ]
   },
   {
@@ -43,12 +45,13 @@
    },
    "source": [
     "## Bounds for distributions* in terms of its marginals?\n",
+    "---\n",
     "\n",
     "* That makes perfect sense!\n",
     "\n",
-    "* Why aren't Fréchet bounds for distributions more mainstream? \n",
+    "* Why aren't these bounds more mainstream? \n",
     "\n",
-    "* Is it because it's hard to pronounce?\n",
+    "* Is it because it's hard to pronounce 'Fréchet'?\n",
     "\n",
     "*_with distributions we mean CDFs, not densities_"
    ]
@@ -62,10 +65,11 @@
    },
    "source": [
     "## Allright, let's point the fingers at ourselves:\n",
-    "\n",
     "---\n",
     "\n",
-    "## What would _I_ do with Fréchet bounds?"
+    "## What would **I** do with Fréchet bounds?\n",
+    "\n",
+    "'Cause the *whole point* of bounds is to try not to break them. Right?"
    ]
   },
   {
@@ -87,13 +91,18 @@
     }
    },
    "source": [
-    "## Idea 1: Use them to estimate Kernel Bandwidths\n",
+    "## An idea: Let's use them for Bandwidth selection in MV KDEs.\n",
+    "---\n",
     "\n",
-    "The *whole point* of bounds is to try not to break them.\n",
+    "* MV kernel estimation is expensive, slow and often hard to check with d>2.\n",
     "\n",
-    "##### Are we breaking Fréchet bounds when CDF estimations with Kernels?\n",
-    "###### And if we break them, how *badly* are we breaking those bounds? \n",
-    "###### And what is the consequence of building estimates that break Fréchet bounds?"
+    "\n",
+    "* Which is why Kernel methods are recommended for smoothing (mostly).\n",
+    "\n",
+    "\n",
+    "* However, working with multivariate is not easy.\n",
+    "    * So a lot of people turn to KDEs in the lack of better information.\n",
+    "    * Or, throw samples at a blackbox and hope for the best."
    ]
   },
   {
@@ -104,42 +113,20 @@
     }
    },
    "source": [
-    "## Fréchet bounds + BW estimation in KDEs?\n",
+    "## How can we use Fréchet bounds here?\n",
+    "---\n",
     "\n",
-    "* The bounds can help prune the search space:\n",
-    "    * Removing parameters that build estimates outside the bounds.\n",
-    "    * Or (if the above was too violent), prune using thresholds. \n",
+    "There are different methods for BW selection, many based on some kind of optimization.\n",
     "\n",
-    "### Even bolder:\n",
-    "* Use the bounds stand-alone to construct likelihood functions and use them directly to fit the bandwidths."
+    "* To prune the search space on any iterative method:\n",
+    "    * (Naive) Removing bws that lead to estimates violating the bounds.\n",
+    "    * (Less naive, but less parsinomic) prune using thresholds.\n",
+    "    \n",
+    "\n",
+    "* To construct functions to optimize over:\n",
+    "    * (Cheap, uninformative) Counting the number of violations of the bound?\n",
+    "    * (Cheap, informative) Summing all diffs between each violation and the bound point?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -149,17 +136,94 @@
     }
    },
    "source": [
-    "### How does bandwidth selection look like?\n",
-    "Code for bandwith selection methods in StatsModels can be found [here](https://www.statsmodels.org/dev/_modules/statsmodels/nonparametric/_kernel_base.html). \n",
+    "## Other questions to answer:\n",
+    "---\n",
     "\n",
-    "As the library is today (march 2019), there is no obviously direct way to feed ranges of hyperparameters in order to constrain the bandwidth selection process. So, I made some simple modifications to be able to affect how the base methods to calculate a bandwidth are used. Those modifications are below."
+    "* Are we breaking Fréchet bounds when estimating CDFs with Kernels?\n",
+    "\n",
+    "    * And if we break them, \n",
+    "        * How _badly_ are they usually broken?\n",
+    "        * Do they get broken often?\n",
+    "    \n",
+    "\n",
+    "* What are the consequences of selecting BWs that lead to breaking Fréchet?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"https://memegenerator.net/img/instances/63332969/do-all-the-things.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What's in Python for this?\n",
+    "---\n",
+    "\n",
+    "* Scikit-Learn, StatsModels.\n",
+    "\n",
+    "\n",
+    "* Only StatsModels has a convenience method to estimate CDFs with use Kernels.\n",
+    "\n",
+    "\n",
+    "* Code for bandwith selection methods in StatsModels can be found [here](https://www.statsmodels.org/dev/_modules/statsmodels/nonparametric/_kernel_base.html). \n",
+    "\n",
+    "\n",
+    "* A bummer: no direct way to feed ranges of hyperparameters in order to constrain the search space.\n",
+    "    * They simply call scipy.optimize.fmin underneath.\n",
+    "\n",
+    "\n",
+    "* However, we can insert a cheap check *before* the expensive scipy call and prune away unwanted values :)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What did I do?\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://data.whicdn.com/images/40743151/original.gif\">"
+    "## \n",
+    "<img src=\"https://i.kym-cdn.com/photos/images/original/000/187/324/allthethings.png\">"
    ]
   },
   {
